--- a/drivers/media/platform/msm/vidc/Kconfig
+++ b/drivers/media/platform/msm/vidc/Kconfig
@@ -5,6 +5,6 @@
 menuconfig MSM_VIDC_V4L2
 	tristate "Qualcomm MSM V4L2 based video driver"
 	depends on ARCH_QCOM && VIDEO_V4L2
-	select ARM_DMA_USE_IOMMU
+	depends on IOMMU_DMA
 	select VIDEOBUF2_DMA_SG
 	select QCOM_SCM
